--- a/TestCommandLauncher/TestCommandLauncher.csproj
+++ b/TestCommandLauncher/TestCommandLauncher.csproj
@@ -35,6 +35,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>true</UseVSHostingProcess>
+    <StartAction>Program</StartAction>
+    <StartProgram>$(ProgramFiles)\NUnit 2.5.2\bin\net-2.0\nunit.exe</StartProgram>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.5.2.9222, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
